--- a/MVcPractice1/Views/Home/Index2.cshtml
+++ b/MVcPractice1/Views/Home/Index2.cshtml
@@ -1,16 +1,17 @@
 ﻿@{
     Layout = null;
+
 }
 
 <!DOCTYPE html>
 
 <html>
-    
     <head>
 
     </head>
 
     <body>
+        <a asp-controller="Employee" asp-action="Add">Go to the Employee Add</a>
         <h1 style="color:red;">
             Hello from Index2
         </h1>
